tests/NormalTests/paczka1/small_fuzzy/12545258.err
Error in line 11: yJKI S6C4 52,2
Error in line 1: nd6aWUpFoe S389 0,7
Error in line 8: yJKI S389 85,6
